/**
 * MIT License
 * Copyright (c) 2021 Fonoster Inc
 *
 * The Domains proto contains the artificats for domains administration
 */
syntax = "proto3";

package fonoster.domains.v1beta1;

option go_package = "github.com/fonoster/fonoster/mods/domains/fonoster/services/protos/domains";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "common.proto";
 
service Domains {
  // Lists domains from the SIP Proxy subsystem
  rpc ListDomains (ListDomainsRequest) returns (ListDomainsResponse) {};
  // Creates a new Domain resource
  rpc CreateDomain (CreateDomainRequest) returns (Domain) {
    option (google.api.http) = { 
      post: "/v1beta1/domains"
      body: "*"
    };
  };
  // Gets a Domain by reference
  rpc GetDomain (GetDomainRequest) returns (Domain) {
    option (google.api.http) = { get: "/v1beta1/domains/{ref}" };
  };
  // Change or update fields in a resource
  rpc UpdateDomain (UpdateDomainRequest) returns (Domain) {
    option (google.api.http) = { 
      put: "/v1beta1/domains/{ref}"
      body: "*" 
    };
  };
  // Hard delete of a domain resource
  rpc DeleteDomain (DeleteDomainRequest) returns (fonoster.common.v1beta1.Empty) {
    option (google.api.http) = { 
      delete: "/v1beta1/domains/{ref}"
    };
  };
}

message ListDomainsRequest {
  // The maximum number of items to return
  int32 page_size = 1;

  // The next_page_token value returned from the previous request, if any
  string page_token = 2;

  // Level of detail of the individual entities (reserved)
  fonoster.common.v1beta1.View view = 3;
}

message ListDomainsResponse {
  // List of Domains
  repeated Domain domains = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list
  string next_page_token = 2;
}

message CreateDomainRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"name\": \"Acme Corp\", \"domainUri\": \"sip.acme.com\", \"egressRule\": \".*\", \"egressNumberRef\": \"1yyB170ozd\"}"
  };
  string name = 1 [(google.api.field_behavior) = REQUIRED];
  string domain_uri = 2 [(google.api.field_behavior) = REQUIRED];
  string egress_rule = 3;
  string egress_number_ref = 4;
  repeated string access_deny = 5;
  repeated string access_allow = 6;
}

message UpdateDomainRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"egressNumberRef\": \"1yyB170ozd\"}"
  };
  // Domain's reference
  string ref = 1 [(google.api.field_behavior) = REQUIRED];
  string name = 2;
  string egress_rule = 3;
  string egress_number_ref = 4;
  repeated string access_deny = 5;
  repeated string access_allow = 6;
}

message GetDomainRequest {
  // Domain's reference
  string ref = 1;
}

message DeleteDomainRequest {
  // Domain's reference
  string ref = 1;
}

message Domain {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: "{\"ref\": \"tyyB1z0tgj\", \"name\": \"Acme Corp\", \"domainUri\": \"sip.acme.com\", \"egressRule\": \".*\", \"egressNumberRef\": \"1yyB170ozd\", \"createTime\": \"2021-10-05T13:23:07.221Z\", \"updateTime\": \"2021-10-05T13:23:07.221Z\"}"
  };
  // Domain's reference
  string ref = 1;
  string name = 2 [(google.api.field_behavior) = REQUIRED];
  string domain_uri = 3 [(google.api.field_behavior) = REQUIRED];
  string egress_rule = 4 ;
  string egress_number_ref = 5;
  repeated string access_deny = 6;
  repeated string access_allow = 7;
  string create_time = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
  string update_time = 9 [(google.api.field_behavior) = OUTPUT_ONLY];
}

